# synergy-spark-enterprise

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  cspell.json
.github/actions/dist-upload/: action.yml
.github/workflows/: ci.yml
cmake/: Build.cmake  Deskflow.cmake  Libraries.cmake  Licensing.cmake
res/gui/win/: app.rc
scripts/: package.py  setup.py  setup_venv.py
scripts/lib/: bootstrap.py
src/: CMakeLists.txt
src/lib/: CMakeLists.txt
src/lib/synergy/: CMakeLists.txt
src/lib/synergy/gui/: ActivationDialog.cpp  ActivationDialog.h  AppTime.cpp  AppTime.h  CMakeLists.txt  constants.h
src/lib/synergy/gui/dialogs/: UpgradeDialog.cpp  UpgradeDialog.h
src/lib/synergy/gui/license/: LicenseHandler.cpp  LicenseHandler.h  LicenseSettings.cpp  LicenseSettings.h  license_notices.cpp  license_notices.h  license_utils.cpp  license_utils.h
src/lib/synergy/hooks/: gui_hook.h
src/lib/synergy/license/: CMakeLists.txt  License.cpp  License.h  Product.cpp  Product.h  SerialKey.h  SerialKeyType.cpp  SerialKeyType.h  parse_serial_key.cpp  parse_serial_key.h
src/test/: CMakeLists.txt
src/test/integtests/: CMakeLists.txt
src/test/unittests/: CMakeLists.txt
src/test/unittests/gui/license/: LicenseHandlerTests.cpp  license_notices_tests.cpp
src/test/unittests/license/: LicenseTests.cpp  ProductTests.cpp  SerialKeyTypeTests.cpp
